tests/NormalTests/paczka1/fuzzy1/90264828.err
Error in line 6: OUgStMSffGp S524 73,7
Error in line 12: OUgStMSffGp S477 27,2
Error in line 8: 2HACUWL1wZ A203 25,4
Error in line 25: A203 S723 182,2
Error in line 34: A203 A203 77,0
Error in line 2: tk6t86pBT S477 28,6
